--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
+    "react-select-timezone": "^1.0.0",
+    "react-timezone": "^2.4.0",
+    "react-timezone-select": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
