--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.1",
+    "appointment-calendar-carousal": "^1.3.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-datetimepicker": "^0.0.22",
+    "react-bootstrap-timezone-picker": "^2.0.1",
     "react-calendar": "^4.2.1",
+    "react-date-time-picker-popup": "^1.0.3",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -19,6 +25,7 @@
     "react-select-timezone": "^1.0.0",
     "react-timezone": "^2.4.0",
     "react-timezone-select": "^2.1.1",
+    "spacetime": "^7.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
