--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select-timezone": "^1.0.0",
     "react-timezone": "^2.4.0",
     "react-timezone-select": "^2.1.1",
+    "reactjs-timezone-select": "^2.0.0",
     "spacetime": "^7.4.4",
     "web-vitals": "^2.1.4"
   },
