--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "framer-motion": "^10.12.22",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.4.0",
@@ -22,6 +23,7 @@
     "react-select": "^5.7.4",
     "react-timezone-select": "^2.1.2",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.18.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
