--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.16.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
